--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ variables:
   NUGET_PACKAGES_DIRECTORY: '.nuget'
   # 3) A relative path to the source code from project repository root.
   # NOTE: Please edit this path so it matches the structure of your project!
-  SOURCE_CODE_PATH: 'src/'
+  SOURCE_CODE_PATH: 'src/Pipelines.Net/'
 
 # ### Define global cache rule
 #
@@ -99,6 +99,7 @@ build:
   # path to the directory where it is located (e.g. 'dotnet build ./src/ConsoleApp').
   # Only one project path can be passed as a parameter to 'dotnet build' command.
   script:
+    - echo "$SOURCE_CODE_PATH"
     - 'dotnet build --no-restore'
 
 tests:
