--- a/src/Pipelines.Net/Pipelines.Net.csproj
+++ b/src/Pipelines.Net/Pipelines.Net.csproj
@@ -7,6 +7,7 @@
 		<Platforms>x86;x64</Platforms>
 		<BaseOutputPath>build\</BaseOutputPath>		
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>		
+		<Version>0.1.0</Version>		
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
 		<OutputPath>build\Debug\x86</OutputPath>
