--- a/src/Pipelines.Net/Pipelines.Net.csproj
+++ b/src/Pipelines.Net/Pipelines.Net.csproj
@@ -4,22 +4,10 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Platforms>x86;x64</Platforms>
-		<BaseOutputPath>build\</BaseOutputPath>		
+		<Platforms>AnyCPU</Platforms>
+		<BaseOutputPath>..\build\Pipelines.Net\</BaseOutputPath>		
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>		
 		<Version>0.1.0</Version>		
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-		<OutputPath>build\Debug\x86</OutputPath>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
-		<OutputPath>build\Debug\x64</OutputPath>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-		<OutputPath>build\Release\x86</OutputPath>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
-		<OutputPath>build\Release\x64</OutputPath>
 	</PropertyGroup>
 
 </Project>
